--- a/index.html
+++ b/index.html
@@ -1,5 +1,15 @@
 ---
 layout: default
 ---
-<h1>Thought Process</h1>
+<section class="card hero">
+  <h1 class="hero-title">Thought Process</h1>
+  <p class="hero-sub">
+    A blog about leading technology with an engineering mindset —  
+    cloud platforms, modern applications, systems thinking, and the tradeoffs behind real decisions.
+  </p>
+  <p class="subtle" style="margin-top:14px;">
+    Writing about building platforms that scale, teams that ship, and systems that last.
+  </p>
+</section>
+
 <a href="{{ site.baseurl }}/posts/">View all recent posts →</a>
